# Practica

./: README.md
Dependencies/: ReadMe.txt
Sources/: CMakeLists.txt  ReadMe.txt
Sources/Algorithms/: Algorithms.cpp  Algorithms.h  CMakeLists.txt
Sources/ImageProcessingApp/: CMakeLists.txt  main.cpp
Sources/Utils/: CMakeLists.txt  Utils.cpp  Utils.h
